--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <fork>true</fork>
+          <executable>C:\Program Files\Java\jdk1.8.0_152\bin\javac.exe</executable>
+        </configuration>
+      </plugin>
+      <plugin>
         <artifactId>maven-site-plugin</artifactId>
         <configuration>
           <reportPlugins>
